# zenn-wgpu-example-browser

./: .gitignore  Cargo.toml  README.md  index.html
src/: main.rs
src/shader/: shader.wgsl
