[package]
name = "zenn-wgpu-example-browser"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.17"
gloo = "0.8.0"
vek = "0.15.8"
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.81"
wasm-bindgen-futures = "0.4.31"
wee_alloc = "0.4.5"

[dependencies.bytemuck]
version="1.7.3"
features = ["derive"]

[dependencies.web-sys]
version = "0.3.58"
features = ["HtmlCanvasElement"]

[dependencies.wgpu]
version = "0.13.1"
features = ["webgl"]

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true
